Fix syntax errors

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,22 +1,17 @@
 workflows:
-    android-workflow-id:
-        name: Android Sample Workflow
-          scripts:
-            - name: Install npm dependencies and update Cordova version
-              script: | 
-                npm install
-            - name: Setup Cordova Android platform
-              script: | 
-                ionic cordova platform remove android --nosave
-                ionic cordova platform add android \
-                  --confirm \
-                  --no-interactive \
-                  --noresources 
-    - name: Build Android Cordova App
-      script: | 
-        ionic cordova build android \
-          --no-interactive \
-          --prod \
-          --device
+  android-workflow:
+    name: Building for Android
+    scripts:
+      - name: Install dependencies
+        script: npm ci
+      - name: Add Android platform
+        script: |
+          set -e # exit on first failed command
+          cordova platform remove android --nosave
+          cordova platform add android --confirm --no-interactive --noresources
+      - name: Build Android release
+        script: |
+          set -e # exit on first failed command
+          cordova build android --no-interactive
     artifacts:
-      - platforms/android/app/build/outputs/**/*.apk 
+        - platforms/android/app/build/outputs/**/*.apk 
