--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,12 @@
 workflows:
   android-workflow:
     name: Building for Android
+    triggering:
+      events:
+        - push
+      branch_patterns: 
+        - pattern: main
+      cancel_previous_builds: true
     scripts:
       - name: Install dependencies
         script: npm i
@@ -13,5 +19,6 @@ workflows:
         script: |
           set -e # exit on first failed command
           cordova build android --no-interactive
+    
     artifacts:
         - platforms/android/app/build/outputs/**/*.apk 
