--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,6 +1,8 @@
 workflows:
   android-workflow:
     name: Building for Android
+    environment:
+      java: 1.8
     triggering:
       events:
         - push
