--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,7 +4,8 @@ workflows:
     environment:
       xcode: 14.3.1
       node: 16.20.0
-      npm: 8.19.4        
+      npm: 8.19.4
+      cordova: 12.0.0 
     scripts:
       - name: Install dependencies
         script: |
